# wix_erpnext_integration

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  STRUCTURE_FIXED.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py  validate_setup.py
wix_integration/: __init__.py  hooks.py  install.py  modules.txt  patches.txt  tasks.py  validation.py
wix_integration/api/: webhook.py
wix_integration/patches/v1_0/: __init__.py  create_wix_integration_settings.py  migrate_existing_items.py  setup_custom_fields.py
wix_integration/public/: __init__.py
wix_integration/public/css/: wix_integration.css
wix_integration/public/js/: wix_integration.js
wix_integration/tasks/: sync_inventory.py
wix_integration/templates/includes/: __init__.py
wix_integration/templates/pages/: __init__.py
wix_integration/wix_integration/: __init__.py  hooks.py  patches.txt  wix_connector.py
wix_integration/wix_integration/api/: order_sync.py  product_sync.py  safe_logging_patch.py  utils.py  webhook.py
wix_integration/wix_integration/doctype/wix_category_mapping/: wix_category_mapping.json  wix_category_mapping.py
wix_integration/wix_integration/doctype/wix_integration/: __init__.py  wix_integration.py
wix_integration/wix_integration/doctype/wix_integration_log/: __init__.py  (+2 more)
wix_integration/wix_integration/patches/: add_wix_custom_fields.py
wix_integration/wix_integration/tasks/: maintenance.py  reports.py  sync_orders.py  sync_products.py
(+9 files in other folders)
