[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wix_integration"
authors = [{name = "Wix ERPNext Integration Team", email = "support@wixerpnext.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Framework :: Frappe",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Office/Business",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["frappe", "erpnext", "wix", "integration", "sync", "ecommerce"]
dynamic = ["version", "description"]
dependencies = [
	"frappe",
	"requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/macrobian88/wix_erpnext_integration"
Repository = "https://github.com/macrobian88/wix_erpnext_integration.git"
Documentation = "https://github.com/macrobian88/wix_erpnext_integration/blob/main/README.md"
"Bug Tracker" = "https://github.com/macrobian88/wix_erpnext_integration/issues"

[project.optional-dependencies]
dev = [
	"pre-commit",
	"black",
	"ruff",
]